--- a/todo/Todo.Web/Todo.Web/Views/Todo/ListImportantAllGroup.cshtml
+++ b/todo/Todo.Web/Todo.Web/Views/Todo/ListImportantAllGroup.cshtml
@@ -27,9 +27,7 @@
 <table class="table" width=100%>
     <thead class="thead-dark">
         <tr>
-            <th class="center-parent" width=5%>
-                Progress
-            </th>
+
             <th width=5%>
                 @Html.DisplayNameFor(model => model.ID)
             </th>
@@ -59,10 +57,7 @@
         @foreach (var item in Model)
         {
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Progress)
-                    @Html.ActionLink("", "ProgressEdit", "Todo", new { id = item.ID }, new { @class = "fa fa-flag-checkered", onclick = "return confirm('Finish Todo" })
-                </td>
+
                 <td>
                     @Html.DisplayFor(modelItem => item.ID)
                 </td>
@@ -91,14 +86,14 @@
                     {
                         <td class="center-parent">
                             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-                            @Html.ActionLink("", "ImportantTodo", "Todo", new { id = item.ID }, new { @class = "fa fa-star-o", onclick = "return confirm('Finish Todo" })
+                            @Html.ActionLink("", "ImportantTodoImportant", "Todo", new { id = item.ID }, new { @class = "fa fa-star-o", onclick = "return confirm('Finish Todo" })
 
                         </td>
                     }
                     else
                     {
                         <td class="center-parent">
-                            @Html.ActionLink("", "ImportantTodo", "Todo", new { id = item.ID }, new { @class = "fa fa-star", onclick = "return confirm('Finish Todo" })
+                            @Html.ActionLink("", "ImportantTodoImportant", "Todo", new { id = item.ID }, new { @class = "fa fa-star", onclick = "return confirm('Finish Todo" })
                         </td>
                     }
                 }
