--- a/todo/Todo.Web/Todo.Web/Views/Todo/TodoListAllGroup.cshtml
+++ b/todo/Todo.Web/Todo.Web/Views/Todo/TodoListAllGroup.cshtml
@@ -11,6 +11,13 @@
 
 </p>
 
+<div class="form-inline">
+    <form asp-controller="Todo" asp-action="TodoListAllGroup" method="get">
+        <input class="form-control " type="search" placeholder="Search...." aria-label="task" name="task">
+        <button class="btn btn-outline-success " type="submit">Search</button>
+    </form>
+</div>
+
 
 
 <style>
@@ -26,9 +33,7 @@
 <table class="table" width=100%>
     <thead class="thead-dark">
         <tr>
-            <th class="center-parent" width=5%>
-                Progress
-            </th>
+
             <th width=5%>
                 @Html.DisplayNameFor(model => model.ID)
             </th>
@@ -46,6 +51,9 @@
                 Edit
             </th>
             <th class="center-parent" width=5%>
+                Progress
+            </th>
+            <th class="center-parent" width=5%>
                 Finish
             </th>
             <th class="center-parent" width=5%>
@@ -58,10 +66,7 @@
         @foreach (var item in Model)
         {
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Progress)
-                    @Html.ActionLink("", "ProgressEdit", "Todo", new { id = item.ID }, new { @class = "fa fa-flag-checkered", onclick = "return confirm('Finish Todo" })
-                </td>
+
                 <td>
                     @Html.DisplayFor(modelItem => item.ID)
                 </td>
@@ -101,15 +106,12 @@
                         </td>
                     }
                 }
-
-
-
-
-
-
-
                 <td class="center-parent">
                     @Html.ActionLink("", "UpdateTodo", "Todo", new { id = item.ID }, new { @class = "fas fa-edit" })
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Progress)
+                    @Html.ActionLink("", "ProgressEdit", "Todo", new { id = item.ID }, new { @class = "fa fa-flag-checkered", onclick = "return confirm('Finish Todo" })
                 </td>
                 <td class="center-parent">
                     @Html.ActionLink("", "FinishTodo", "Todo", new { id = item.ID }, new { @class = "fa fa-flag-checkered", onclick = "return confirm('Finish Todo" })
