--- a/todo/Todo.Web/Todo.Web/Views/Group/Index.cshtml
+++ b/todo/Todo.Web/Todo.Web/Views/Group/Index.cshtml
@@ -46,188 +46,55 @@
 </style>
 
 
-@{
-    ViewData["Title"] = "CreateGroup";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
-<body class="hold-transition sidebar-mini">
-    <div class="wrapper">
-
-        <!-- Navbar -->
-        <nav class="main-header navbar navbar-expand navbar-white navbar-light">
-            <!-- Left navbar links -->
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
-                </li>
-                <li class="nav-item d-none d-sm-inline-block">
-                    <a asp-action="Index" asp-controller="Group" class="nav-link">Group</a>
-                </li>
-                <li class="nav-item d-none d-sm-inline-block">
-                    <a asp-action="TodoListAllGroup" asp-controller="Todo" class="nav-link">Todo</a>
-                </li>
-                <li class="nav-item d-none d-sm-inline-block">
-                    <a asp-action="ListImportantAllGroup" asp-controller="Todo" class="nav-link">Important</a>
-                </li>
-                <li class="nav-item d-none d-sm-inline-block">
-                    <a asp-action="ListFinishGroup" asp-controller="Todo" class="nav-link">Finish</a>
-                </li>
-            </ul>
-
-            <!-- SEARCH FORM -->
-            <form class="form-inline ml-3" asp-controller="Todo" asp-action="TodoListAllGroup" method="get">
-                <div class="input-group input-group-sm">
-                    <input class="form-control form-control-navbar" type="search" name="task" placeholder="Search" aria-label="Search">
-                    <div class="input-group-append">
-                        <button class="btn btn-navbar" type="submit">
-                            <i class="fas fa-search"></i>
-                        </button>
-                    </div>
-                </div>
-            </form>
 
 
+<h1>Group Todo</h1>
 
-        </nav>
-        <!-- /.navbar -->
-        <!-- Main Sidebar Container -->
-        <aside class="main-sidebar sidebar-dark-primary elevation-4">
-            <!-- Brand Logo -->
-            <!-- Sidebar -->
-            <div class="sidebar">
-                <!-- Sidebar user panel (optional) -->
-                <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-                    <div class="image">
-                        <img src="https://bhhk.com.vn/Data/upload/images/News/Deatils/tin-thi-truong-bao-hiem/chu-tam06-06-2017-09-42-10.jpg" class="img-circle elevation-2" alt="User Image">
-                    </div>
-                    <div class="info">
-                        <a asp-action="TodoListAllGroup" asp-controller="Todo" class="d-block">Task All</a>
-                    </div>
-                </div>
+<p>
+    <a class="btn btn-outline-primary" asp-controller="Group" asp-action="CreateGroup">Create Group</a>
+</p>
+<table class="table table-striped table-bordered table-hover center-parent">
+    <thead class="thead-dark">
+        <tr>
+            <th>STT</th>
+            <th>
 
-                <!-- Sidebar Menu -->
-                <nav class="mt-2">
-                    <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-                        <!-- Add icons to the links using the .nav-icon class
-                        with font-awesome or any other icon font library -->
-                        <li class="nav-item has-treeview menu-open">
-                            <a class="nav-link active">
-                                <i class="nav-icon fas fa-tachometer-alt"></i>
-                                <p>
-                                    List Group
-                                    <i class="right fas fa-angle-left"></i>
-                                </p>
-                            </a>
-                            <ul class="nav nav-treeview">
-                                @foreach (var item in Model)
-                                {
-                                    <li class="nav-item">
-                                        <a class="nav-link active">
+                @Html.DisplayNameFor(model => model.GroupName)
+            </th>
+            <th>Todo</th>
+            <th>Add</th>
+            <th>Edit</th>
+            <th>Delete</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
 
+                <td>
 
-                                            <i class="far fa-circle nav-icon"></i>
-                                            @Html.DisplayFor(modelItem => item.GroupName) (@item.AllTask)
-                                            @Html.ActionLink(": Delete", "DeleteGroup", "Group", new { id = item.IDG }, new { @class = "fas fa-eraser", onclick = "return confirm('Are you sure to delete group?')" })||||
-                                            @Html.ActionLink(": Edit", "UpdateGroup", "Group", new { id = item.IDG }, new { @class = "fas fa-edit" })||||
+                    @Html.DisplayFor(modelItem => item.STT)
+                </td>
+                <td>
 
-                                            @Html.ActionLink(": Add", "Index", "Todo", new { id = item.IDG }, new { @class = "fas fa-book-open" })
+                    @Html.DisplayFor(modelItem => item.GroupName)
+                </td>
+                <td>
 
-                                        </a>
-                                    </li>
-                                }
+                    @Html.DisplayFor(modelItem => item.AllTask)
+                </td>
+                <td>
+                    @Html.ActionLink("", "Index", "Todo", new { id = item.IDG }, new { @id = "colorcornflowerblue", @class = "fas fa-book-open" })
+                </td>
+                <td>
+                    @Html.ActionLink("", "UpdateGroup", "Group", new { id = item.IDG }, new { @id = "colorgreen", @class = "fas fa-edit" })
+                </td>
+                <td>
+                    @Html.ActionLink("", "DeleteGroup", "Group", new { id = item.IDG }, new { @id = "colorblack", @class = "fas fa-trash-alt", onclick = "return confirm('Are you sure to delete group?')" })
+                </td>
 
-
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a asp-action="ListFinishGroup" asp-controller="Todo" class="nav-link">
-                                <i class="nav-icon fas fa-th"></i>
-                                <p>
-                                    List Finish
-                                    @*<span class="right badge badge-danger">New</span>*@
-                                </p>
-                            </a>
-                        </li>
-
-                    </ul>
-                </nav>
-                <!-- /.sidebar-menu -->
-            </div>
-            <!-- /.sidebar -->
-        </aside>
-
-        <!-- Content Wrapper. Contains page content -->
-        <div class="content-wrapper">
-            <h1 class="marginpadding">Group Todo</h1>
-
-            <p class="marginpadding">
-                <a class="btn btn-outline-primary" asp-controller="Group" asp-action="CreateGroup">Create Group</a>
-            </p>
-            <table class="table table-striped table-bordered table-hover center-parent   ">
-                <thead class="thead-dark">
-                    <tr>
-                        <th>
-                            @*@Html.DisplayNameFor(model => model.IDG)*@
-                            @Html.DisplayNameFor(model => model.GroupName)
-                        </th>
-                        <th>Todo</th>
-                        <th>Create</th>
-                        <th>Edit</th>
-                        <th>Delete</th>
-
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var item in Model)
-                    {
-                        <tr>
-                            <td>
-
-                                @Html.DisplayFor(modelItem => item.GroupName)
-                            </td>
-                            <td>
-
-                                @Html.DisplayFor(modelItem => item.AllTask)
-                            </td>
-                            <td>
-                                @Html.ActionLink("", "Index", "Todo", new { id = item.IDG }, new { @id = "colorcornflowerblue", @class = "fas fa-book-open" })
-                            </td>
-                            <td>
-                                @Html.ActionLink("", "UpdateGroup", "Group", new { id = item.IDG }, new { @id = "colorgreen", @class = "fas fa-edit" })
-                            </td>
-                            <td>
-                                @Html.ActionLink("", "DeleteGroup", "Group", new { id = item.IDG }, new { @id = "colorblack", @class = "fas fa-trash-alt", onclick = "return confirm('Are you sure to delete group?')" })
-                            </td>
-
-                        </tr>
-                    }
-                </tbody>
-            </table>
-        </div>
-        <!-- /.content-wrapper -->
-        <!-- Control Sidebar -->
-        <aside class="control-sidebar control-sidebar-dark">
-            <!-- Control sidebar content goes here -->
-            <div class="p-3">
-                <h5>Title</h5>
-                <p>Sidebar content</p>
-            </div>
-        </aside>
-        <!-- /.control-sidebar -->
-        <!-- Main Footer -->
-        <footer class="main-footer">
-            <!-- To the right -->
-            <div class="float-right d-none d-sm-inline">
-                Anything you want
-            </div>
-            <!-- Default to the left -->
-            <strong>Copyright &copy; 2014-2019 <a href="https://adminlte.io">AdminLTE.io</a>.</strong> All rights reserved.
-        </footer>
-    </div>
-    <!-- ./wrapper -->
-    <!-- REQUIRED SCRIPTS -->
-    <!-- jQuery -->
-    <script src="~/js/jquery.min.js"></script>
-    <script src="~/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/adminlte.min.js"></script>
-</body>
+            </tr>
+        }
+    </tbody>
+</table>
