--- a/todo/Todo.Web/Todo.Web/Views/Todo/Index.cshtml
+++ b/todo/Todo.Web/Todo.Web/Views/Todo/Index.cshtml
@@ -68,7 +68,7 @@
         <tr>
 
             <th width=5%>
-                @Html.DisplayNameFor(model => model.ID)
+                STT
             </th>
             <th width=10% class="center-parent">
                 @Html.DisplayNameFor(model => model.DateCreate)
@@ -105,7 +105,7 @@
             <tr>
 
                 <td>
-                    @Html.DisplayFor(modelItem => item.ID)
+                    @Html.DisplayFor(modelItem => item.STT)
                 </td>
                 <td class="center-parent">
                     @Html.DisplayFor(modelItem => item.DateCreate)
