--- a/todo/Todo.Web/Todo.Web/Views/ListTodo/Index.cshtml
+++ b/todo/Todo.Web/Todo.Web/Views/ListTodo/Index.cshtml
@@ -88,7 +88,7 @@
                 @{ if (item.Finish == false)
                     {
                         <td class="center-parent">
-                            @Html.DisplayFor(modelItem => item.IDL)
+                            @Html.DisplayFor(modelItem => item.STT)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.ListName)
