--- a/todo/Todo.Web/Todo.Web/Views/Shared/_Layout.cshtml
+++ b/todo/Todo.Web/Todo.Web/Views/Shared/_Layout.cshtml
@@ -80,16 +80,16 @@
             </ul>
 
             <!-- SEARCH FORM -->
-            <form class="form-inline ml-3" asp-controller="Todo" asp-action="TodoListAllGroup" method="get">
-                <div class="input-group input-group-sm">
-                    <input class="form-control form-control-navbar" type="search" name="task" placeholder="Search" aria-label="Search">
-                    <div class="input-group-append">
-                        <button class="btn btn-navbar" type="submit">
-                            <i class="fas fa-search"></i>
-                        </button>
+            @*<form class="form-inline ml-3" asp-controller="Todo" asp-action="TodoListAllGroup" method="get">
+                    <div class="input-group input-group-sm">
+                        <input class="form-control form-control-navbar" type="search" name="task" placeholder="Search" aria-label="Search">
+                        <div class="input-group-append">
+                            <button class="btn btn-navbar" type="submit">
+                                <i class="fas fa-search"></i>
+                            </button>
+                        </div>
                     </div>
-                </div>
-            </form>
+                </form>*@
 
 
 
