--- a/todo/Todo.Web/Todo.Web/Views/Todo/ListFinishGroup.cshtml
+++ b/todo/Todo.Web/Todo.Web/Views/Todo/ListFinishGroup.cshtml
@@ -42,7 +42,7 @@
     <thead class="thead-dark">
         <tr>
             <th width=5%>
-                @Html.DisplayNameFor(model => model.ID)
+                STT
             </th>
             <th width=10% class="center-parent">
                 @Html.DisplayNameFor(model => model.DateCreate)
@@ -64,7 +64,7 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.ID)
+                    @Html.DisplayFor(modelItem => item.STT)
                 </td>
                 <td class="center-parent">
                     @Html.DisplayFor(modelItem => item.DateCreate)
