--- a/todo/Todo.Web/Todo.Web/Views/Todo/TodoListAllGroup.cshtml
+++ b/todo/Todo.Web/Todo.Web/Views/Todo/TodoListAllGroup.cshtml
@@ -26,11 +26,6 @@
     </div>
 </div>
 
-@*@ViewBag.VGgroups*@
-@ViewBag.VGgroupid
-@*@ViewBag.VGgroupidd*@
-
-
 <style>
     #colorcornflowerblue {
         color: cornflowerblue;
@@ -61,7 +56,7 @@
     <thead class="thead-dark">
         <tr>
             <th width=5%>
-                @Html.DisplayNameFor(model => model.ID)
+                STT
             </th>
             <th width=10% class="center-parent">
                 @Html.DisplayNameFor(model => model.DateCreate)
@@ -97,7 +92,7 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.ID)
+                    @Html.DisplayFor(modelItem => item.STT)
                 </td>
                 <td class="center-parent">
                     @Html.DisplayFor(modelItem => item.DateCreate)
