--- a/todo/Todo.Web/Todo.Web/Views/ListTodo/Index.cshtml
+++ b/todo/Todo.Web/Todo.Web/Views/ListTodo/Index.cshtml
@@ -102,7 +102,7 @@
                     else
                     {
                         <td id="linethrough" class="center-parent">
-                            @Html.DisplayFor(modelItem => item.IDL)
+                            @Html.DisplayFor(modelItem => item.STT)
                         </td>
                         <td id="linethrough">
                             @Html.DisplayFor(modelItem => item.ListName)
